# write-once-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
src/: CMakeLists.txt
src/include/: write_once.hpp
unit-tests/: CMakeLists.txt  write_once_test.cpp
